# liar

./: .dev-constraints.txt  .dev-requirements.txt  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  clean.py  conanfile.py  configure.py  pyproject.toml  setup.py
doc/: CMakeLists.txt  liar.doxygen
doc/latex/: cameras.tex  getting_started.tex  gfdl.tex  guide.tex  introduction.tex  kernel.tex  liar.bib  liar_the_guide.tcp  liar_the_guide.tex  output.tex  samplers.tex  scenery.tex  shaders.tex  textures.tex  tracers.tex
src/: CMakeLists.txt  __init__.py  config.h.in  liar.sln
src/cameras/: CMakeLists.txt  cameras.vcproj  cameras_common.cpp  cameras_common.h  cameras_init.cpp  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
src/codecs/: CMakeLists.txt  __init__.py  jpeg.cpp  jpeglib.cpp  lodepng.cpp  openexr.cpp
src/kernel/: CMakeLists.txt  attenuation.cpp  attenuation.h  bands.h  bounded_ray.cpp  bounded_ray.h  bsdf.cpp  bsdf.h  bsdf_caps.h  camera.cpp  camera.h  config.h  differential_ray.cpp  differential_ray.h  icc_space.cpp  icc_space.h  image_codec.cpp  image_codec.h  intersection.cpp  intersection.h  intersection_context.cpp  intersection_context.h  kernel.vcproj  kernel_common.cpp  kernel_common.h  kernel_init.cpp  lass_exports.cpp  lass_exports.h  libkernel.vcproj  light_context.cpp  light_context.h  light_sample.cpp  light_sample.h  matrix_4x4.h  medium.cpp  medium.h  microfacet.cpp  observer.cpp  observer.h  output_sample.cpp  (+56 more)
src/liar/: CMakeLists.txt  __init__.py  config.h.in
src/liar/cameras/: CMakeLists.txt  cameras_common.h  cameras_init.cpp  orthographic_camera.cpp  perspective_camera.cpp
src/liar/codecs/: CMakeLists.txt  __init__.py  jpeglib.cpp  lodepng.cpp  openexr.cpp
src/liar/kernel/: CMakeLists.txt  attenuation.cpp  attenuation.h  bounded_ray.cpp  bsdf_caps.h  camera.cpp  differential_ray.h  icc_space.cpp  image_codec.cpp  image_codec.h  kernel_common.h  kernel_init.cpp  lass_exports.h  light_context.h  light_sample.h  matrix_4x4.h  medium.cpp  medium.h  microfacet.h  observer.cpp  observer.h  output_sample.cpp  per_thread_buffer.h  projection.h  projection_perspective.cpp  projection_spherical.h  pyobject_ref.h  render_engine.h  render_target.h  rgb_space.cpp  rgb_space.h  sampler.cpp  sampler.h  sampler_progressive.h  scene_object.cpp  scene_object.h  (+12 more)
src/mediums/: CMakeLists.txt  beer.cpp  beer.h  bounded.cpp  bounded.h  bounded_medium.cpp  bounded_medium.h  exponential_fog.cpp  exponential_fog.h  fog.cpp  fog.h  mediums_common.cpp  mediums_common.h  mediums_init.cpp  transformation.cpp  transformation.h
src/output/: CMakeLists.txt  depth_channel.cpp  depth_channel.h  display.cpp  display.h  display_impl.cpp  filter_mitchell.cpp  filter_mitchell.h  filter_triangle.cpp  filter_triangle.h  image.cpp  image.h  output.vcproj  output_common.cpp  output_common.h  output_config.h.in  output_init.cpp  raster.cpp  raster.h  socket.cpp  socket.h  socket_client.cpp  socket_client.h  socket_helpers.cpp  socket_helpers.h  socket_host.cpp  socket_host.h  splitter.cpp  splitter.h
src/samplers/: CMakeLists.txt  halton.cpp  halton.h  latin_hypercube.cpp  latin_hypercube.h  samplers.vcproj  samplers_common.cpp  samplers_common.h  samplers_init.cpp  stratifier.cpp  stratifier.h
src/scenery/: CMakeLists.txt  aabb_tree.cpp  aabb_tree.h  box.cpp  box.h  clip_map.cpp  clip_map.h  csg.cpp  csg.h  disk.cpp  disk.h  goursat.cpp  goursat.h  light_area.cpp  light_area.h  light_directional.cpp  light_directional.h  light_point.cpp  light_point.h  light_projection.cpp  light_projection.h  light_sky.cpp  light_sky.h  light_spot.cpp  light_spot.h  list.cpp  list.h  motion_rotation.cpp  motion_rotation.h  motion_translation.cpp  motion_translation.h  object_trees.cpp  object_trees.h  parallelogram.cpp  parallelogram.h  plane.cpp  plane.h  scenery.vcproj  scenery_common.cpp  scenery_common.h  (+15 more)
src/setup/: build_state.py  setup.cfg  setup.py  setup.vcproj
src/shaders/: CMakeLists.txt  ashikhmin_shirley.cpp  ashikhmin_shirley.h  beer.cpp  beer.h  bounded_medium.cpp  bounded_medium.h  bump_mapping.cpp  bump_mapping.h  conductor.cpp  conductor.h  cook_torrance.cpp  cook_torrance.h  dielectric.cpp  dielectric.h  exponential_fog.cpp  exponential_fog.h  flip.cpp  flip.h  fog.cpp  fog.h  jakob.cpp  jakob.h  lafortune.cpp  lafortune.h  lambert.cpp  lambert.h  linear_interpolator.cpp  linear_interpolator.h  microfacet_trowbridge_reitz.cpp  mirror.cpp  mirror.h  oren_nayar.cpp  oren_nayar.h  shaders.vcproj  shaders_common.cpp  shaders_common.h  shaders_init.cpp  simple.cpp  simple.h  (+8 more)
src/spectra/: black_body.cpp  black_body.h  cauchy.cpp  cauchy.h  r0_conductor.h  recovery_meng_simon.cpp  recovery_meng_simon.h  recovery_smits.cpp  recovery_smits.h  sampled.cpp  sampled.h  spectra_common.cpp  spectra_common.h  spectra_init.cpp
src/textures/: CMakeLists.txt  abs.cpp  abs.h  alpha_channel.h  angular_mapping.cpp  angular_mapping.h  binary_operator.cpp  binary_operator.h  checker_board.cpp  checker_board.h  checker_volume.cpp  checker_volume.h  constant.cpp  constant.h  context_mapping.cpp  context_mapping.h  cube_mapping.cpp  cube_mapping.h  division.cpp  division.h  exp.cpp  exp.h  fbm.cpp  fbm.h  frequency.cpp  frequency.h  global.cpp  global.h  grid_board.cpp  grid_board.h  image.cpp  image.h  linear_interpolator.cpp  linear_interpolator.h  log.cpp  log.h  max.cpp  max.h  mix_2.cpp  mix_2.h  (+41 more)
src/tools/: CMakeLists.txt  __init__.py  colors.py  cornell_box.py  download.py  geometry.py  pbrt.py  ply.py  rgb_spaces.py  scripting.py  spd.py  wavefront_obj.py
src/tracers/: CMakeLists.txt  adjoint_photon_tracer.cpp  adjoint_photon_tracer.h  direct_lighting.cpp  direct_lighting.h  photon_mapper.cpp  photon_mapper.h  tracers.vcproj  tracers_common.cpp  tracers_common.h  tracers_init.cpp
test/: CMakeLists.txt  main.cpp  path_hooks.py  test_codecs.cpp  test_matrix_4x4.cpp  test_observer.cpp  test_observer.out  test_spectrum.cpp  testenv.py
test/white_furnace/: ashikhmin_shirley.py
(+282 files in other folders)
