[tool.ruff]
target-version = 'py310'

[tool.ruff.lint]
# On top of the default select (E4, E7, E9, and F), enable
# isort (I) and unsorted-dunder-all (RUF022).
extend-select = ["I", "RUF022"]

[tool.ruff.lint.isort]
known-first-party = ["liar"]

[tool.mypy]
mypy_path = "src"

[build-system]
requires = ["wheel"]
# https://peps.python.org/pep-0517/
build-backend = "build_mywheel"
backend-path = ["."]
